# maestro

./: .gitignore  README.md  biome.json  index.html  package-lock.json  package.json  tailwind.config.ts  test_process_management.swift
.github/workflows/: build.yml  ci.yml  release.yml
MaestroMCPServer/: Package.resolved  Package.swift
claude-maestro/: Branch.swift  BranchSelector.swift  BranchVisualizationView.swift  ClaudeDocManager.swift  CommitDetailPanel.swift  CommitGraph.swift  CommitRowView.swift  ContentView.swift  GitManager.swift  GitTreeView.swift  GraphCanvas.swift  GraphLayoutEngine.swift  MCPServerConfig.swift  MCPServerEditorSheet.swift  MCPServerManager.swift  MarketplaceBrowserView.swift  MarketplaceManager.swift  MarketplaceSection.swift  ModePicker.swift  PluginModels.swift  PresetSelector.swift  QuickActionManager.swift  SidebarCollapseStateManager.swift  SidebarView.swift  SkillConfig.swift  SkillManager.swift  SkillSelector.swift  TemplatePreset.swift  TerminalView.swift  WorktreeManager.swift  claude_maestroApp.swift
claude-maestro.xcodeproj/: project.pbxproj
claude-maestro/AgentStatus/: AgentState.swift  MaestroStateMonitor.swift
claude-maestro/MCP/: MCPProtocol.swift  MCPStdioServer.swift  MCPToolHandler.swift
claude-maestro/ProcessManagement/: ManagedProcessCoordinator.swift  NativeLogManager.swift  NativePortManager.swift  ProcessLauncher.swift  ProcessMonitor.swift  ProcessRegistry.swift  ProcessTree.swift  ProcessTreeViewModel.swift
claude-maestro/Views/: AgentStatusCard.swift  CollapsibleSection.swift  OutputStreamsSection.swift  ProcessSidebarView.swift  ProcessTreeView.swift  SessionOutputView.swift
claude-maestroTests/: ProcessManagementTests.swift
docs/research/: 00-MASTER-ARCHITECTURAL-PLAN.md  01-core-architecture-breakdown.md  02-mcp-marketplace-plugins-breakdown.md  03-git-visualization-actions-breakdown.md  README.md
maestro-mcp-server/: Cargo.toml  build.mjs  package-lock.json  package.json
maestro-mcp-server/src/: index.ts  (+2 more)
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: claudemd.rs  fonts.rs  git.rs  github.rs  marketplace.rs  mcp.rs  mod.rs  plugin.rs  session.rs  terminal.rs  usage.rs  worktree.rs
src-tauri/src/core/: error.rs  font_detector.rs  marketplace_error.rs  marketplace_manager.rs  marketplace_models.rs  mcp_config_writer.rs  mcp_manager.rs  mcp_status_monitor.rs  mod.rs  plugin_config_writer.rs  plugin_manager.rs  process_manager.rs  process_tree.rs  session_manager.rs  status_server.rs  terminal_backend.rs  vte_backend.rs  worktree_manager.rs  xterm_backend.rs
src-tauri/src/git/: error.rs  mod.rs  ops.rs  runner.rs
src-tauri/src/github/: error.rs  mod.rs  ops.rs  runner.rs
(+101 files in other folders)
